tests/fail/fail_missing_inisiu.kr
fn helper() nter {
    divolvi 1;
}
